Web Framework v5.2.5
Created and maintained by Darius Babcock, Greener Web Design

## Version 5.2.5 ##
	- Added 'upload2' function to class.uploader.php for smoother uploads. Will later clean up class
	- Added ajax.uploader.php file for easy ajax file uploads. Also added sample HTML form in ajax dir
	- Added a 'file' form type in class.form.php

## Version 5.2.1 ##
	- Added option for namespace element retrieval in class.rss

## Version 5.2.0 ##
	- Added class.rss for quick RSS processing. Currently only supports Atom 2.0
	- Tweaked caching system to be easier to use and cleaned up default page

## Version 5.1.0 ##
	- Moved image and form functions to class.image and class.form respectively. Removed from class.standards

## Version 5.0.0 ##
	- Added insert, update, select, and delete functions to class.database
	- Initialized $main in config.php to that it can be used immediately

## Version 4.9.5 ##
	- Made the lib/css folder dynamic to allow reading from any CSS/PHP file dropped into it
	- Moved the IE-specific stylesheets into a separate folder in lib/css

## Version 4.9.0 ##
	- Tweaks to config.php -> split some settings out into lib/settings for tidyness
	- IE PHP browser detection for cleaner <head>
	- Removed jwplayer in favor of video-js for easier integration/HTML5 support
	- Moved all jquery plugin folders into the jquery folder to clean up lib folder
	- Updated jquery to v1.7.1
	- Updated Nivo slider to v2.7.1
	- Updated 960gs to latest version

## Version 4.8.8 ##
	- Added class.social_media.php (in progress) for generating common social network elements. FB only for now
	- Added style_checker.php in root to display current styles for various elements at a glance
	- Major css button overhaul and updating
	- Changes between style.php and helpers.css


## Version 4.8.7 ##
	- Added expire headers, gzip, and etag options to default htaccess file
	- Added js_constants option to config.php to duplicate PHP constants in JS on page load